[gd_scene load_steps=13 format=3 uid="uid://djd3u5j42nbl2"]

[ext_resource type="Script" uid="uid://yue4g1q8mq0x" path="res://scenes/NPC/denarouzeNPC.gd" id="1_ck3e4"]
[ext_resource type="PackedScene" path="res://scenes/NPC/dd_model.tscn" id="2_0qdqi"]
[ext_resource type="PackedScene" uid="uid://bkoumrhyxgs52" path="res://scenes/NPC/dialougeUI.tscn" id="2_en3g7"]
[ext_resource type="AudioStream" uid="uid://k6d6j5curqrj" path="res://assets/Sounds/scream.mp3" id="4_0qdqi"]
[ext_resource type="AudioStream" uid="uid://dvmkxotku7rf" path="res://assets/Sounds/old-man-5.mp3" id="5_5ec7n"]
[ext_resource type="AudioStream" uid="uid://xwfy1bm5uucl" path="res://assets/Sounds/old-man-laugh.mp3" id="6_83ybo"]
[ext_resource type="AudioStream" uid="uid://bqkh3qvac8fnt" path="res://assets/Sounds/old-man-1.mp3" id="7_o50nj"]
[ext_resource type="AudioStream" uid="uid://hc7fgonhvr2r" path="res://assets/Sounds/old-man-2.mp3" id="8_ss1ox"]
[ext_resource type="AudioStream" uid="uid://b6cwy0468cp80" path="res://assets/Sounds/old-man-3.mp3" id="9_ahln8"]
[ext_resource type="AudioStream" uid="uid://c2dlbqui6q5so" path="res://assets/Sounds/old-man-4.mp3" id="10_6ju5j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_en3g7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_en3g7"]
size = Vector3(0.44940186, 1, 0.5454712)

[node name="DenayrouzeNPC" type="CharacterBody3D" groups=["interactable", "npc"]]
script = ExtResource("1_ck3e4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.7526166, 0, 0, 0, 1.9396337, 1.1895461e-07, 0, -1.464383e-07, 1.5756015, 0.07246968, 1.2751849, -0.11799258)
shape = SubResource("CapsuleShape3D_en3g7")

[node name="dd_model" parent="." instance=ExtResource("2_0qdqi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.33590665, -0.17999554, 2.325621)

[node name="interaction_radius" type="Area3D" parent="."]
transform = Transform3D(3.6062934, 0, 0, 0, 1.8, 0, 0, 0, 3.8529317, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="interaction_radius"]
transform = Transform3D(1.7000004, 0, 0, 0, 0.6955536, 0, 0, 0, 1.7000291, 0.17094421, -0.14700209, 0.23880604)
shape = SubResource("BoxShape3D_en3g7")

[node name="DialogueUI" parent="." instance=ExtResource("2_en3g7")]
offset_top = 474.0
voice_player_path = NodePath("../AudioStreamPlayer3D")
voice_blip_streams = Array[AudioStream]([ExtResource("6_83ybo"), ExtResource("5_5ec7n"), ExtResource("4_0qdqi"), ExtResource("7_o50nj"), ExtResource("8_ss1ox"), ExtResource("9_ahln8"), ExtResource("10_6ju5j")])

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_5ec7n")
volume_db = 22.577

[connection signal="body_entered" from="interaction_radius" to="." method="_on_interaction_radius_body_entered"]
[connection signal="body_exited" from="interaction_radius" to="." method="_on_interaction_radius_body_exited"]
